# notes

./: .gitignore  .gitmodules  .ignore  notes-linux1.ipynb  python-notes.md
C++/: C++Concurrency  matcherTest.cpp  notes-C++.md  notes-c++.ipynb  parameterizedTest.cpp
C++/C++11Concurrency/: notes-C++11Concurrency.md
C++/C++11Concurrency/src/: 001-introduction.cpp  002-threadmanagement.cpp  a.out  (+3 more)
C++/code_snippet/: eraseAnElementInSet.cpp
CCNA/: notes-ccna.md  osi.xlsx
Others/: notes-others.md
Python/: notes-python.md  python-notes.md
Python/code/: test1-forelse.py  test10-polymorphism-operator-overloading.py  test11-polymorphism-method-overloading-overriding.py  test12-abstract-class-method.py  test13-iterator.py  test14-generator.py  test15-exception.py  test16-multi-threading.py  test17-file-handling.py  test17-mydata  test18-binary-search.py  test18-linear-search.py  test19-bubble-sort.py  test19-selection-sort.py  test2-numpy.py  test20-database-connection.py  test21-client.py  test21-server.py  test3-lambda.py  test4-decorator.py  test5-class.py  test6-class-methods.py  test7-inner-class.py  test8-inheritance.py  test9-polymorphism-duck-typing.py
ford/: notes-ford.md
linux/: notes-linux.ipynb  notes-linux.md  notes-linux1.ipynb  notes_linux.ipynb
linux/cmaketutorial/: .gitignore  CMakeLists.txt  build.sh  cmaketutorial_config.h.in  main.cpp  readme.md  run.sh  run_test.sh
linux/cmaketutorial/Adder/: adder.cpp  adder.hpp
linux/cmaketutorial/test/: CMakeLists.txt  ExampleTests.cpp
llvm/: notes-llvm.md
ruby_on_rails/: note_ruby_on_rails.ipynb
